--- a/style.css
+++ b/style.css
@@ -3,4 +3,20 @@ header {
     background-color: #1434A4;
     color: white;
     margin: 0px;
+};
+
+.sidebar {
+    margin: 10px;
+};
+
+.current-weather {
+    display: block;
+    margin: 10px;
+    margin-left: 200px;
+    outline: #1434A4;
+}
+
+#container {
+    margin: 20px;
+    background-color: aqua;
 }
